refactor extractor style from html to page_style.css

--- a/dev/download/release/index.html
+++ b/dev/download/release/index.html
@@ -1,196 +1,43 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <link rel = "Shortcut Icon" href=http://bailiangjin.github.io/favicon.ico>
-        <meta charset="utf-8">
-            <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-                <style>
-                    h1,
-                    h2,
-                    h3,
-                    h4,
-                    h5,
-                    h6,
-                    p,
-                    blockquote {
-                        margin: 0;
-                        padding: 0;
-                    }
-                body {
-                    font-family: "Helvetica Neue", Helvetica, "Hiragino Sans GB", Arial, sans-serif;
-                    font-size: 13px;
-                    line-height: 18px;
-                    color: #737373;
-                    background-color: white;
-                    margin: 10px 13px 10px 13px;
-                }
-                table {
-                    margin: 10px 0 15px 0;
-                    border-collapse: collapse;
-                }
-                td,th {
-                    border: 1px solid #ddd;
-                    padding: 3px 10px;
-                }
-                th {
-                    padding: 5px 10px;
-                }
-                
-                a {
-                    color: #0069d6;
-                }
-                a:hover {
-                    color: #0050a3;
-                    text-decoration: none;
-                }
-                a img {
-                    border: none;
-                }
-                p {
-                    margin-bottom: 9px;
-                }
-                h1,
-                h2,
-                h3,
-                h4,
-                h5,
-                h6 {
-                    color: #404040;
-                    line-height: 36px;
-                }
-                h1 {
-                    margin-bottom: 18px;
-                    font-size: 30px;
-                }
-                h2 {
-                    font-size: 24px;
-                }
-                h3 {
-                    font-size: 18px;
-                }
-                h4 {
-                    font-size: 16px;
-                }
-                h5 {
-                    font-size: 14px;
-                }
-                h6 {
-                    font-size: 13px;
-                }
-                hr {
-                    margin: 0 0 19px;
-                    border: 0;
-                    border-bottom: 1px solid #ccc;
-                }
-                blockquote {
-                    padding: 13px 13px 21px 15px;
-                    margin-bottom: 18px;
-                    font-family:georgia,serif;
-                    font-style: italic;
-                }
-                blockquote:before {
-                    content:"\201C";
-                    font-size:40px;
-                    margin-left:-10px;
-                    font-family:georgia,serif;
-                    color:#eee;
-                }
-                blockquote p {
-                    font-size: 14px;
-                    font-weight: 300;
-                    line-height: 18px;
-                    margin-bottom: 0;
-                    font-style: italic;
-                }
-                code, pre {
-                    font-family: Monaco, Andale Mono, Courier New, monospace;
-                }
-                code {
-                    background-color: #fee9cc;
-                    color: rgba(0, 0, 0, 0.75);
-                    padding: 1px 3px;
-                    font-size: 12px;
-                    -webkit-border-radius: 3px;
-                    -moz-border-radius: 3px;
-                    border-radius: 3px;
-                }
-                pre {
-                    display: block;
-                    padding: 14px;
-                    margin: 0 0 18px;
-                    line-height: 16px;
-                    font-size: 11px;
-                    border: 1px solid #d9d9d9;
-                    white-space: pre-wrap;
-                    word-wrap: break-word;
-                }
-                pre code {
-                    background-color: #fff;
-                    color:#737373;
-                    font-size: 11px;
-                    padding: 0;
-                }
-                sup {
-                    font-size: 0.83em;
-                    vertical-align: super;
-                    line-height: 0;
-                }
-                * {
-                    -webkit-print-color-adjust: exact;
-                }
-                @media screen and (min-width: 914px) {
-                    body {
-                        width: 854px;
-                        margin:10px auto;
-                    }
-                }
-                @media print {
-                    body,code,pre code,h1,h2,h3,h4,h5,h6 {
-                        color: black;
-                    }
-                    table, pre {
-                        page-break-inside: avoid;
-                    }
-                }
-                </style>
-                <title>大白的主页</title>
-                
-    </head>
+<head>
+    <link rel="Shortcut Icon" href=http://bailiangjin.github.io/favicon.ico>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
+    <link rel="stylesheet" type="text/css" href="/css/page_style.css">
+    <title>大白的主页</title>
+
+</head>
 
 <body>
 <h1 align="center">大白的DIY软件</h1>
 
-<p align="center"><img src="https://raw.githubusercontent.com/bailiangjin/bailiangjin.github.io/master/dev/download/picture/HeadPortrait.jpeg" alt="头像" width="10%" height="10%"/></p>
-
-
-
-
-<p align="center">
-<a href="https://bailiangjin.github.com/dev/download/release/SignApkTool_v0.93.jar">Apk签名工具下载（支持mac、windows jdk1.6及以上）</a>
-</p>
-
-<p align="center">
-<a href="https://github.com/bailiangjin/SignApkTool">Apk签名工具源码GitHub链接</a>
-</p>
+<p align="center"><img
+        src="https://raw.githubusercontent.com/bailiangjin/bailiangjin.github.io/master/dev/download/picture/HeadPortrait.jpeg"
+        alt="头像" width="10%" height="10%"/></p>
 
 
 <p align="center">
-<a href="https://github.com/bailiangjin/BaseLibrary">Android 基础公共资源库 Github源码</a>
+    <a href="https://bailiangjin.github.com/dev/download/release/SignApkTool_v0.93.jar">Apk签名工具下载（支持mac、windows
+        jdk1.6及以上）</a>
 </p>
 
 <p align="center">
-<a href="https://github.com/bailiangjin/BaseLibrary/tree/master/ImageLoadDemo">Universal-Image-Loader 封装使用示例</a>
+    <a href="https://github.com/bailiangjin/SignApkTool">Apk签名工具源码GitHub链接</a>
 </p>
-
 
 
 <p align="center">
-<a href="../../../">回首页</a>
+    <a href="https://github.com/bailiangjin/BaseLibrary">Android 基础公共资源库 Github源码</a>
+</p>
+
+<p align="center">
+    <a href="https://github.com/bailiangjin/BaseLibrary/tree/master/ImageLoadDemo">Universal-Image-Loader
+        封装使用示例</a>
 </p>
 
 
-
-
+<p align="center"><a href="/index.html">回首页</a></p>
 
 </body>
 </html>
