--- a/bookmarks/bupt.html
+++ b/bookmarks/bupt.html
@@ -1,166 +1,18 @@
 <!doctype html>
 <html>
 <head>
-    <link rel = "Shortcut Icon" href=http://bailiangjin.github.io/icons/bupt_favicon.ico>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-<style>
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote {
-    margin: 0;
-    padding: 0;
-}
-body {
-    font-family: "Helvetica Neue", Helvetica, "Hiragino Sans GB", Arial, sans-serif;
-    font-size: 13px;
-    line-height: 18px;
-    color: #737373;
-    background-color: white;
-    margin: 10px 13px 10px 13px;
-}
-table {
-	margin: 10px 0 15px 0;
-	border-collapse: collapse;
-}
-td,th {	
-	border: 1px solid #ddd;
-	padding: 3px 10px;
-}
-th {
-	padding: 5px 10px;	
-}
-
-a {
-    color: #0069d6;
-}
-a:hover {
-    color: #0050a3;
-    text-decoration: none;
-}
-a img {
-    border: none;
-}
-p {
-    margin-bottom: 9px;
-}
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    color: #404040;
-    line-height: 36px;
-}
-h1 {
-    margin-bottom: 18px;
-    font-size: 30px;
-}
-h2 {
-    font-size: 24px;
-}
-h3 {
-    font-size: 18px;
-}
-h4 {
-    font-size: 16px;
-}
-h5 {
-    font-size: 14px;
-}
-h6 {
-    font-size: 13px;
-}
-hr {
-    margin: 0 0 19px;
-    border: 0;
-    border-bottom: 1px solid #ccc;
-}
-blockquote {
-    padding: 13px 13px 21px 15px;
-    margin-bottom: 18px;
-    font-family:georgia,serif;
-    font-style: italic;
-}
-blockquote:before {
-    content:"\201C";
-    font-size:40px;
-    margin-left:-10px;
-    font-family:georgia,serif;
-    color:#eee;
-}
-blockquote p {
-    font-size: 14px;
-    font-weight: 300;
-    line-height: 18px;
-    margin-bottom: 0;
-    font-style: italic;
-}
-code, pre {
-    font-family: Monaco, Andale Mono, Courier New, monospace;
-}
-code {
-    background-color: #fee9cc;
-    color: rgba(0, 0, 0, 0.75);
-    padding: 1px 3px;
-    font-size: 12px;
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
-    border-radius: 3px;
-}
-pre {
-    display: block;
-    padding: 14px;
-    margin: 0 0 18px;
-    line-height: 16px;
-    font-size: 11px;
-    border: 1px solid #d9d9d9;
-    white-space: pre-wrap;
-    word-wrap: break-word;
-}
-pre code {
-    background-color: #fff;
-    color:#737373;
-    font-size: 11px;
-    padding: 0;
-}
-sup {
-    font-size: 0.83em;
-    vertical-align: super;
-    line-height: 0;
-}
-* {
-	-webkit-print-color-adjust: exact;
-}
-@media screen and (min-width: 914px) {
-    body {
-        width: 854px;
-        margin:10px auto;
-    }
-}
-@media print {
-	body,code,pre code,h1,h2,h3,h4,h5,h6 {
-		color: black;
-	}
-	table, pre {
-		page-break-inside: avoid;
-	}
-}
-</style>
-<title>北邮书签</title>
-<link rel="fluid-icon" href="../icons/ic_bupt_logo.png" title="北邮书签">
+    <link rel="Shortcut Icon" href=http://bailiangjin.github.io/icons/bupt_favicon.ico>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
+    <link rel="stylesheet" type="text/css" href="/css/page_style.css">
+    <title>北邮书签</title>
+    <link rel="fluid-icon" href="../icons/ic_bupt_logo.png" title="北邮书签">
 
 </head>
 <body>
 <h2 align="center">北邮书签</h2>
 <p>
-<p align="center"><img src="../icons/ic_bupt_logo.png" height="20%" width="20%" alt="北邮首页" /></p>
+<p align="center"><img src="../icons/ic_bupt_logo.png" height="20%" width="20%" alt="北邮首页"/></p>
 
 <h3 align="center">门户</h3>
 
@@ -173,7 +25,7 @@ sup {
 <p align="center"><a href="https://www.bupt.edu.cn/content/content.php?p=6_10_80">北邮校历</a></p>
 
 <p align="center"><a href="http://my.bupt.edu.cn">北邮信息门户</a><br/>
-<font size="1" face="arial" >（信息门户登录 用户名:学号 初始密码:身份证号后六位）</font></p>
+    <font size="1" face="arial">（信息门户登录 用户名:学号 初始密码:身份证号后六位）</font></p>
 
 <h3 align="center">学习</h3>
 
@@ -182,9 +34,8 @@ sup {
 <p align="center"><a href="http://lib.bupt.edu.cn/a/shujukudaohang/charStor/all.htm">北邮数据库导航</a></p>
 
 
-
 <p align="center"><a href="http://yjxt.bupt.edu.cn">成绩查询</a><br/>
-<font size="1" face="arial" >（成绩查询登录 用户名:学号 初始密码:身份证号全部）</font></p>
+    <font size="1" face="arial">（成绩查询登录 用户名:学号 初始密码:身份证号全部）</font></p>
 
 <h3 align="center">SNS</h3>
 
@@ -197,7 +48,7 @@ sup {
 <p align="center">北邮VPN服务端地址:</p>
 <p align="center">学校门户：vpn.bupt.edu.cn</p>
 <p align="center">图书馆：libvpn.bupt.edu.cn</p>
-<p align="center"> <font size="1" face="arial" >（vpn登录 用户名:学号 初始密码:身份证号后六位）</font></p>
+<p align="center"><font size="1" face="arial">（vpn登录 用户名:学号 初始密码:身份证号后六位）</font></p>
 
 <br/>
 <p align="center">问题：mac VPN客户端连接无反应。</p>
@@ -210,7 +61,7 @@ sup {
 
 <p align="center"><a href="search.html">常用搜索书签</a></p>
 
-<p align="center"><a href="../../">回首页</a></p>
+<p align="center"><a href="/index.html">回首页</a></p>
 
 <p align="center">--by 大白</p>
 </body>
