refactor extractor style from html to page_style.css 2

--- a/bookmarks/dev/cloud_service.html
+++ b/bookmarks/dev/cloud_service.html
@@ -25,7 +25,7 @@
 <br/>
 <h3 align="center">NetWork</h3>
 <p align="center"><a href="http://123.249.34.252:8080/" target="_blank">NPS</a></p>
-<p align="center"><a href="http://123.249.34.252:6443/" target="_blank">ASUS</a></p>
+<p align="center"><a href="https://123.249.34.252:6443/" target="_blank">ASUS</a></p>
 <p align="center"><a href="http://123.249.34.252:6808/" target="_blank">HUA_WEI_CTCC</a></p>
 <p align="center"><a href="http://123.249.34.252:6809/" target="_blank">HUA_WEI_CUCC</a></p>
 <p align="center"><a href="http://123.249.34.252:6831/" target="_blank">XIAO_MI</a></p>
