--- a/bookmarks/dev/server/jenkins.html
+++ b/bookmarks/dev/server/jenkins.html
@@ -13,11 +13,15 @@
 <br/>
 <p align="center"><a href="http://114.116.14.31:8080" target="_blank">Jenkins-1431</a></p>
 <br/>
-<p align="center"><a href="http://123.249.34.252:8180/" target="_blank">Jenkins-PI_3BP</a></p>
+<p align="center"><a href="http://123.249.34.252:10280/" target="_blank">Jenkins-PI_3BP</a></p>
 <br/>
 <p align="center"><a href="http://123.249.34.252:8380/" target="_blank">Jenkins-PI_3B</a></p>
-
 <br/>
+<p align="center"><a href="http://123.249.34.252:11580/" target="_blank">M401A_3445</a></p>
+<br/>
+<p align="center"><a href="http://123.249.34.252:21080/" target="_blank">E900V22D</a></p>
+<br/>
+
 <br/>
 
 <p align="center"><a href="/index.html">回首页</a></p>
