--- a/bookmarks/dev/server/jenkins.html
+++ b/bookmarks/dev/server/jenkins.html
@@ -17,6 +17,8 @@
 <br/>
 <p align="center"><a href="http://123.249.34.252:8380/" target="_blank">Jenkins-PI_3B</a></p>
 <br/>
+<p align="center"><a href="http://123.249.34.252:7788/" target="_blank">M401A_4B58</a></p>
+<br/>
 <p align="center"><a href="http://123.249.34.252:11580/" target="_blank">M401A_3445</a></p>
 <br/>
 <p align="center"><a href="http://123.249.34.252:21080/" target="_blank">E900V22D</a></p>
