update bookmark r refactor js

--- a/bookmarks/cloud_service.html
+++ b/bookmarks/cloud_service.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-    <link rel="stylesheet" type="text/css" href="/css/page_style.css">
+    <link rel="stylesheet" type="text/css" href="/assets/css/page_style.css">
     <title>云服务合集</title>
+    <script src="/assets/js/url_utils.js"></script>
 
 </head>
 <body>
@@ -15,26 +16,26 @@
 
 <br/>
 <h3 align="center">服务管理</h3>
-<p align="center"><a href="server/jenkins.html">Jenkins</a></p>
-<p align="center"><a href="server/portainer.html">Portainer</a></p>
+<p align="center"><a href="cloud_service/jenkins.html">Jenkins</a></p>
+<p align="center"><a href="#" onclick="open_url('34252','11590')">Portainer</a></p>
 
 <br/>
 <h3 align="center">Position</h3>
-<p align="center"><a href="https://114.116.12.71" target="_blank">Position</a></p>
+<p align="center"><a href="#" onclick="open_url('1271','')">Position</a></p>
 
 <br/>
 <h3 align="center">NetWork</h3>
-<p align="center"><a href="http://123.249.34.252:8080/" target="_blank">NPS</a></p>
-<p align="center"><a href="https://123.249.34.252:6443/" target="_blank">ASUS</a></p>
-<p align="center"><a href="http://123.249.34.252:6808/" target="_blank">HUA_WEI_CTCC</a></p>
-<p align="center"><a href="http://123.249.34.252:6809/" target="_blank">HUA_WEI_CUCC</a></p>
-<p align="center"><a href="http://123.249.34.252:6831/" target="_blank">XIAO_MI</a></p>
+<p align="center"><a href="#" onclick="open_url('34252','8081')">NPS</a></p>
+<p align="center"><a href="#" onclick="open_url('34252','6443','https')">ASUS</a></p>
+<p align="center"><a href="#" onclick="open_url('34252','6808')">HUA_WEI_CTCC</a></p>
+<p align="center"><a href="#" onclick="open_url('34252','6809')">HUA_WEI_CUCC</a></p>
+<p align="center"><a href="#" onclick="open_url('34252','6831')">XIAO_MI</a></p>
 
 <br/>
 <h3 align="center">本地服务</h3>
-<p align="center"><a href="https://bytedance.asuscomm.com:8443/" target="_blank">ASUS</a></p>
-<p align="center"><a href="http://bytedance.asuscomm.com:8123/" target="_blank">HA</a></p>
-<p align="center"><a href="http://bytedance.asuscomm.com:8040/" target="_blank">NAS</a></p>
+<p align="center"><a href="#" onclick="open_url('asus','8443','https')">ASUS</a></p>
+<p align="center"><a href="#" onclick="open_url('asus','8123')">HA</a></p>
+<p align="center"><a href="#" onclick="open_url('asus','8123')">HA</a></p>
 
 
 <br/>
