--- a/bookmarks/search.html
+++ b/bookmarks/search.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-    <link rel="stylesheet" type="text/css" href="/css/page_style.css">
+    <link rel="stylesheet" type="text/css" href="/assets/css/page_style.css">
     <title>搜索书签合集</title>
 
 </head>
@@ -49,7 +49,7 @@
 
 
 <h3 align="center">友情链接</h3>
-<p align="center"><a href="../../bookmarks/bupt.html">北邮书签</a></p>
+<p align="center"><a href="/bookmarks/bupt.html">北邮书签</a></p>
 
 <p>
 
