--- a/index.html
+++ b/index.html
@@ -1,61 +1,43 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
-    <link rel="Shortcut Icon" href=http://bailiangjin.github.io/favicon.ico>
+    <link rel="Shortcut Icon" href="http://bailiangjin.github.io/favicon.ico">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-    <link rel="stylesheet" type="text/css" href="/css/page_style.css">
+    <link rel="stylesheet" type="text/css" href="/assets/css/page_style.css">
     <title>大白的主页</title>
-
 </head>
 <body>
 <h1 align="center">大白的主页</h1>
-
-<!--春未老，风细柳斜斜。试上超然台上看，半壕春水一城花。烟雨暗千家。-->
-<!--寒食后，酒醒却咨嗟。休对故人思故国，且将新火试新茶。诗酒趁年华。-->
 
 <h3 align="center">春未老，风细柳斜斜。</h3>
 
 <h3 align="center">试上超然台上看，半壕春水一城花。烟雨暗千家。</h3>
 
 <h3 align="center">Enterprise 2021</h3>
-<p align="center"><img src="icons/ic_head_portrait.jpeg" alt="头像" width="10%" height="10%"/></p>
+<p align="center"><img src="assets/icons/ic_head_portrait.jpeg" alt="头像" width="10%" height="10%"></p>
 
 <p align="center"><a href="https://github.com/bailiangjin" target="_blank">GitHub</a></p>
 
-<p align="center"><a href="bookmarks/dev/cloud_service.html" target="_blank">云服务</a></p>
+<p align="center"><a href="bookmarks/cloud_service.html" target="_blank">云服务</a></p>
 
 <p align="center"><a href="bookmarks/dev/index.html" target="_blank">开发书签</a></p>
 
-<p align="center">
-    <a href="bookmarks/search.html" target="_blank">搜索书签</a>
-</p>
+<p align="center"><a href="bookmarks/search.html" target="_blank">搜索书签</a></p>
 
-<p align="center">
-    <a href="bookmarks/blog.html" target="_blank">博客书签</a>
-</p>
+<p align="center"><a href="bookmarks/blog.html" target="_blank">博客书签</a></p>
 
-<p align="center">
-    <a href="bookmarks/bupt.html" target="_blank">北邮书签</a>
-</p>
+<p align="center"><a href="/bookmarks/bupt.html" target="_blank">北邮书签</a></p>
 
-<p align="center">
-    <a href="blog/articles/dev_aticles.html" target="_blank">博客文章分享</a>
-</p>
+<p align="center"><a href="bookmarks/blog/articles/dev_aticles.html" target="_blank">博客文章分享</a></p>
 
-<p align="center">
-    <a href="dev/download/release/index.html" target="_blank">DIY软件下载</a>
-</p>
+<p align="center"><a href="/product/tools/index.html" target="_blank">DIY软件下载</a></p>
 
-<p align="center">
-    <a href="dev/project/geekweather/index.html" target="_blank">极客天气App下载</a>
-</p>
+<p align="center"><a href="/product/geekweather/index.html" target="_blank">极客天气App下载</a></p>
 
-<p align="center">
-    <a href="http://xianhuagushici.com" target="_blank">闲话古诗词</a>
-</p>
-<p align="center"><img src="icons/ic_xianhuagushici_erweima.jpeg" alt="闲话古诗词二维码" width="25%" height="25%"/></p>
-<p align="center">“闲话古诗词”微信公众号二维码</p>
-<p align="center">我开发的 喜欢的可以扫描关注一下</p>
+<p align="center"><a href="http://xianhuagushici.com" target="_blank">闲话古诗词</a></p>
+<p align="center"><img src="assets/icons/ic_xianhuagushici_erweima.jpeg" alt="闲话古诗词二维码" width="25%" height="25%"></p>
+<p align="center">“闲话古诗词” 微信公众号二维码</p>
+<p align="center">喜欢的可以扫描关注一下</p>
 </body>
 </html>
