--- a/bookmarks/bupt.html
+++ b/bookmarks/bupt.html
@@ -4,15 +4,15 @@
     <link rel="Shortcut Icon" href=http://bailiangjin.github.io/icons/bupt_favicon.ico>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-    <link rel="stylesheet" type="text/css" href="/css/page_style.css">
+    <link rel="stylesheet" type="text/css" href="/assets/css/page_style.css">
     <title>北邮书签</title>
-    <link rel="fluid-icon" href="../icons/ic_bupt_logo.png" title="北邮书签">
+    <link rel="fluid-icon" href="/assets/icons/ic_bupt_logo.png" title="北邮书签">
 
 </head>
 <body>
 <h2 align="center">北邮书签</h2>
 <p>
-<p align="center"><img src="../icons/ic_bupt_logo.png" height="20%" width="20%" alt="北邮首页"/></p>
+<p align="center"><img src="../assets/icons/ic_bupt_logo.png" height="20%" width="20%" alt="北邮首页"/></p>
 
 <h3 align="center">门户</h3>
 
