--- a/bookmarks/dev/index.html
+++ b/bookmarks/dev/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-    <link rel="stylesheet" type="text/css" href="/css/page_style.css">
+    <link rel="stylesheet" type="text/css" href="/assets/css/page_style.css">
     <title>大白的开发书签</title>
 
 </head>
@@ -16,7 +16,7 @@
 
 <p align="center"><a href="https://github.com">Github</a></p>
 
-<p align="center"><a href="github/index.html">常用Github库</a></p>
+<p align="center"><a href="github.html">常用Github库</a></p>
 
 <p align="center"><a href="http://stackoverflow.com">Stackoverflow</a></p>
 
