--- a/bookmarks/cloud_service.html
+++ b/bookmarks/cloud_service.html
@@ -21,7 +21,7 @@
 
 <br/>
 <h3 align="center">Position</h3>
-<p align="center"><a href="#" onclick="open_url('1271','')">Position</a></p>
+<p align="center"><a href="#" onclick="open_url('1271','','https')">Position</a></p>
 
 <br/>
 <h3 align="center">NetWork</h3>
@@ -35,8 +35,6 @@
 <h3 align="center">本地服务</h3>
 <p align="center"><a href="#" onclick="open_url('asus','8443','https')">ASUS</a></p>
 <p align="center"><a href="#" onclick="open_url('asus','8123')">HA</a></p>
-<p align="center"><a href="#" onclick="open_url('asus','8123')">HA</a></p>
-
 
 <br/>
 <h3 align="center">云服务器</h3>
