update product bookmarks

--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
 
 <p align="center"><a href="http://xianhuagushici.com" target="_blank">闲话古诗词</a></p>
 <p align="center"><img src="assets/icons/ic_xianhuagushici_erweima.jpeg" alt="闲话古诗词二维码" width="25%" height="25%"></p>
-<p align="center">“闲话古诗词” 微信公众号二维码</p>
-<p align="center">喜欢的可以扫描关注一下</p>
+<p align="center">“闲话古诗词” 微信公众号 喜欢请描关注</p>
 </body>
 </html>
