--- a/product/geekweather/index.html
+++ b/product/geekweather/index.html
@@ -15,21 +15,16 @@
 <h3 align="center">GeekStyle</h3>
 
 
-<p align="center"><img
-        src="https://raw.githubusercontent.com/bailiangjin/bailiangjin.github.io/master/dev/download/picture/HeadPortrait.jpeg"
-        alt="头像" width="10%" height="10%"/></p>
+<p align="center"><img src="/assets/icons/ic_head_portrait.jpeg" alt="头像" width="10%" height="10%"/></p>
 
 
-<p align="center">扫描下方二维码 下载极客天气Android版</p>
-
-<p align="center"><img
-        src="https://raw.githubusercontent.com/bailiangjin/bailiangjin.github.io/master/dev/project/geekweather/geek_weather_android_erweima.png"
-        alt="头像" width="25%" height="25%"/></p>
+<p align="center"><a href="/product/geekweather/assets/file/GeekWeather-latest-release.apk">点击下载 极客天气 Android版</a></p>
 
 
-<p align="center">
-    <a href="https://raw.githubusercontent.com/bailiangjin/bailiangjin.github.io/master/dev/project/geekweather/GeekWeather-latest-release.apk">点击下载极客天气Apk文件</a>
-</p>
+<!--<p align="center">扫描二维码 下载 极客天气 Android版</p>-->
+
+<!--<p align="center"><img src="/product/geekweather/assets/icon/geek_weather_erweima.png"-->
+<!--                       alt="极客天气下载二维码" width="25%" height="25%"/></p>-->
 
 
 <p align="center">“极简工作室”出品</p>
