--- a/bookmarks/cloud_service/jenkins.html
+++ b/bookmarks/cloud_service/jenkins.html
@@ -14,15 +14,15 @@
 <br/>
 <p align="center"><a href="#" onclick="open_url('1431','8080')">Jenkins-1431</a></p>
 <br/>
-<p align="center"><a href="#" onclick="open_url('34252','10288')">Jenkins-PI_3BP</a></p>
+<p align="center"><a href="#" onclick="open_url('34252','10280','https')">Jenkins-PI_3BP</a></p>
 <br/>
-<p align="center"><a href="#" onclick="open_url('34252','8388')">Jenkins-PI_3B</a></p>
+<p align="center"><a href="#" onclick="open_url('34252','8380','https')">Jenkins-PI_3B</a></p>
 <br/>
-<p align="center"><a href="#" onclick="open_url('34252','7788')">M401A_4B58</a></p>
+<p align="center"><a href="#" onclick="open_url('34252','7780','https')">M401A_4B58</a></p>
 <br/>
-<p align="center"><a href="#" onclick="open_url('34252','11588')">M401A_3445</a></p>
+<p align="center"><a href="#" onclick="open_url('34252','11580','https')">M401A_3445</a></p>
 <br/>
-<p align="center"><a href="#" onclick="open_url('34252','888')">E900V22D</a></p>
+<p align="center"><a href="#" onclick="open_url('34252','880','https')">E900V22D</a></p>
 <br/>
 
 <br/>
