--- a/bookmarks/cloud_service.html
+++ b/bookmarks/cloud_service.html
@@ -25,16 +25,12 @@
 
 <br/>
 <h3 align="center">NetWork</h3>
-<p align="center"><a href="#" onclick="open_url('34252','8081')">NPS</a></p>
+<p align="center"><a href="#" onclick="open_url('34252','3443','https')">NPS</a></p>
+<p align="center"><a href="#" onclick="open_url('34252','17300','https')">HI_NAS</a></p>
 <p align="center"><a href="#" onclick="open_url('34252','6443','https')">ASUS</a></p>
-<p align="center"><a href="#" onclick="open_url('34252','6808')">HUA_WEI_CTCC</a></p>
-<p align="center"><a href="#" onclick="open_url('34252','6809')">HUA_WEI_CUCC</a></p>
-<p align="center"><a href="#" onclick="open_url('34252','6831')">XIAO_MI</a></p>
-
-<br/>
-<h3 align="center">本地服务</h3>
-<p align="center"><a href="#" onclick="open_url('asus','8443','https')">ASUS</a></p>
-<p align="center"><a href="#" onclick="open_url('asus','8123')">HA</a></p>
+<p align="center"><a href="#" onclick="open_url('34252','6808','https')">HUA_WEI_CTCC</a></p>
+<p align="center"><a href="#" onclick="open_url('34252','6809','https')">HUA_WEI_CUCC</a></p>
+<p align="center"><a href="#" onclick="open_url('34252','6831','https')">XIAO_MI</a></p>
 
 <br/>
 <h3 align="center">云服务器</h3>
