--- a/bookmarks/cloud_service/jenkins.html
+++ b/bookmarks/cloud_service/jenkins.html
@@ -12,7 +12,7 @@
 
 <p align="center"><a href="#" onclick="open_url('1271','8080')">Jenkins-1271</a></p>
 <br/>
-<p align="center"><a href="#" onclick="open_url('1431','8080')">Jenkins-1431</a></p>
+<p align="center"><a href="#" onclick="open_url('1431','','https')">Jenkins-1431</a></p>
 <br/>
 <p align="center"><a href="#" onclick="open_url('34252','10280','https')">Jenkins-PI_3BP</a></p>
 <br/>
