--- a/bookmarks/cloud_service/jenkins.html
+++ b/bookmarks/cloud_service/jenkins.html
@@ -10,9 +10,9 @@
 <body>
 <h1 align="center">Jenkins</h1>
 
-<p align="center"><a href="#" onclick="open_url('1271','8080')">Jenkins-1271</a></p>
+<p align="center"><a href="#" onclick="open_url('1431','8180','https')">Jenkins-001</a></p>
 <br/>
-<p align="center"><a href="#" onclick="open_url('1431','','https')">Jenkins-1431</a></p>
+<p align="center"><a href="#" onclick="open_url('1431','8080','https')">Jenkins-002</a></p>
 <br/>
 <p align="center"><a href="#" onclick="open_url('34252','10280','https')">Jenkins-PI_3BP</a></p>
 <br/>
