--- a/bookmarks/cloud_service.html
+++ b/bookmarks/cloud_service.html
@@ -17,8 +17,7 @@
 <br/>
 <h3 align="center">服务管理</h3>
 <p align="center"><a href="cloud_service/jenkins.html">Jenkins</a></p>
-<p align="center"><a href="#" onclick="open_url('34252','11590','https')">Portainer</a></p>
-
+<p align="center"><a href="cloud_service/portainer.html">Portainer</a></p>
 <br/>
 <h3 align="center">Position</h3>
 <p align="center"><a href="#" onclick="open_url('1431','','https')">Position</a></p>
