--- a/bookmarks/cloud_service.html
+++ b/bookmarks/cloud_service.html
@@ -16,8 +16,8 @@
 
 <br/>
 <h3 align="center">服务管理</h3>
-<p align="center"><a href="cloud_service/jenkins.html">Jenkins</a></p>
-<p align="center"><a href="cloud_service/portainer.html">Portainer</a></p>
+<p align="center"><a href="cloud_service/jenkins.html" target="_blank">Jenkins</a></p>
+<p align="center"><a href="cloud_service/portainer.html" target="_blank">Portainer</a></p>
 <br/>
 <h3 align="center">Position</h3>
 <p align="center"><a href="#" onclick="open_url('1431','','https')">Position</a></p>
@@ -47,12 +47,12 @@
 
 <br/>
 <h3 align="center">开发</h3>
-<p align="center"><a href="https://github.com">Github</a></p>
-<p align="center"><a href="https://stackoverflow.com">Stackoverflow</a></p>
+<p align="center"><a href="https://github.com" target="_blank">Github</a></p>
+<p align="center"><a href="https://stackoverflow.com" target="_blank">Stackoverflow</a></p>
 
 <br/>
 <h3 align="center">友情链接</h3>
-<p align="center"><a href="/bookmarks/bupt.html">北邮书签</a></p>
+<p align="center"><a href="/bookmarks/bupt.html" target="_blank">北邮书签</a></p>
 
 <p>
 
