--- a/bookmarks/cloud_service/portainer.html
+++ b/bookmarks/cloud_service/portainer.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
     <link rel="stylesheet" type="text/css" href="/assets/css/page_style.css">
-    <title>Jenkins</title>
+    <title>Portainer</title>
     <script src="/assets/js/url_utils.js"></script>
 </head>
 <body>
