--- a/bookmarks/cloud_service/jenkins.html
+++ b/bookmarks/cloud_service/jenkins.html
@@ -26,7 +26,10 @@
 <br/>
 
 <br/>
+<p align="center"><a href="/bookmarks/cloud_service.html">回云服务页</a></p>
+<br/>
 
+<br/>
 <p align="center"><a href="/index.html">回首页</a></p>
 
 </body>
