--- a/bookmarks/cloud_service.html
+++ b/bookmarks/cloud_service.html
@@ -18,6 +18,7 @@
 <h3 align="center">服务管理</h3>
 <p align="center"><a href="cloud_service/jenkins.html" target="_blank">Jenkins</a></p>
 <p align="center"><a href="cloud_service/portainer.html" target="_blank">Portainer</a></p>
+<p align="center"><a href="cloud_service/ai.html" target="_blank">大模型</a></p>
 <br/>
 <h3 align="center">Position</h3>
 <p align="center"><a href="#" onclick="open_url('1431','','https')">Position</a></p>
