--- a/bookmarks/cloud_service/ai.html
+++ b/bookmarks/cloud_service/ai.html
@@ -4,22 +4,24 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
     <link rel="stylesheet" type="text/css" href="/assets/css/page_style.css">
-    <title>Portainer</title>
+    <title>大模型</title>
     <script src="/assets/js/url_utils.js"></script>
 </head>
 <body>
-<h1 align="center">Portainer</h1>
+<h1 align="center">大模型</h1>
 
-<p align="center"><a href="#" onclick="open_url('34252','11590','https')">Portainer_M401A_3455</a></p>
+
+<p align="center"><a href="https://chat.openai.com">ChatGPT</a></p>
 <br/>
 
-<p align="center"><a href="#" onclick="open_url('34252','890','https')">Portainer_E900V22D</a></p>
+<p align="center"><a href="https://chatglm.cn">ChatGLM</a></p>
+<br/>
+<p align="center"><a href="http://mianfeiai.site/#">其他</a></p>
 <br/>
 
 <br/>
 <p align="center"><a href="/bookmarks/cloud_service.html">回云服务页</a></p>
 <br/>
-
 <p align="center"><a href="/index.html">回首页</a></p>
 
 </body>
