--- a/bookmarks/cloud_service/jenkins.html
+++ b/bookmarks/cloud_service/jenkins.html
@@ -22,7 +22,9 @@
 <br/>
 <p align="center"><a href="#" onclick="open_url('34252','11580','https')">M401A_3445</a></p>
 <br/>
-<p align="center"><a href="#" onclick="open_url('34252','880','https')">E900V22D</a></p>
+<p align="center"><a href="#" onclick="open_url('34252','880','https')">E900V22D_E468</a></p>
+<br/>
+<p align="center"><a href="#" onclick="open_url('34252','11980','https')">E900V22D_F3A2</a></p>
 <br/>
 
 <br/>
