--- a/bookmarks/cloud_service/jenkins.html
+++ b/bookmarks/cloud_service/jenkins.html
@@ -14,9 +14,13 @@
 <br/>
 <p align="center"><a href="#" onclick="open_url('1431','8080','https')">Jenkins-002</a></p>
 <br/>
+<p align="center"><a href="#" onclick="open_url('34252','8080','https')">Jenkins-003</a></p>
+<br/>
+<br/>
 <p align="center"><a href="#" onclick="open_url('34252','10280','https')">Jenkins-PI_3BP</a></p>
 <br/>
 <p align="center"><a href="#" onclick="open_url('34252','8380','https')">Jenkins-PI_3B</a></p>
+<br/>
 <br/>
 <p align="center"><a href="#" onclick="open_url('34252','7780','https')">M401A_4B58</a></p>
 <br/>
