--- a/bookmarks/cloud_service/jenkins.html
+++ b/bookmarks/cloud_service/jenkins.html
@@ -13,13 +13,13 @@
 <p align="center"><a href="#" onclick="open_url('1431','8180','https')">Jenkins-001</a></p>
 <br/>
 
-<p align="center"><a href="#" onclick="open_url('1431','8080','https')">Jenkins-002</a></p>
-<br/>
+<!--<p align="center"><a href="#" onclick="open_url('1431','8080','https')">Jenkins-002</a></p>-->
+<!--<br/>-->
 
-<p align="center"><a href="#" onclick="open_url('34252','8080','https')">Jenkins-003</a></p>
-<br/>
-<br/>
+<!--<p align="center"><a href="#" onclick="open_url('34252','8080','https')">Jenkins-003</a></p>-->
+<!--<br/>-->
 
+<br/>
 <p align="center"><a href="#" onclick="open_url('34252','10280','https')">Jenkins-PI_3BP</a></p>
 <br/>
 
@@ -36,12 +36,12 @@
 <p align="center"><a href="#" onclick="open_url('34252','11880','https')">M401A_337E</a></p>
 <br/>
 
-<br/>
-<p align="center"><a href="#" onclick="open_url('34252','880','https')">E900V22D_E468</a></p>
-<br/>
+<!--<br/>-->
+<!--<p align="center"><a href="#" onclick="open_url('34252','880','https')">E900V22D_E468</a></p>-->
+<!--<br/>-->
 
-<p align="center"><a href="#" onclick="open_url('34252','11980','https')">E900V22D_F3A2</a></p>
-<br/>
+<!--<p align="center"><a href="#" onclick="open_url('34252','11980','https')">E900V22D_F3A2</a></p>-->
+<!--<br/>-->
 
 <br/>
 <p align="center"><a href="/bookmarks/cloud_service.html">回云服务页</a></p>
