--- a/bookmarks/cloud_service.html
+++ b/bookmarks/cloud_service.html
@@ -12,13 +12,15 @@
 <h2 align="center">云服务合集</h2>
 
 <br/>
+<h3 align="center">大模型</h3>
 <p align="center"><a href="https://chat.openai.com/chat" target="_blank">ChatGPT</a></p>
+<p align="center"><a href="cloud_service/ai.html" target="_blank">所有大模型</a></p>
 
 <br/>
 <h3 align="center">服务管理</h3>
 <p align="center"><a href="cloud_service/jenkins.html" target="_blank">Jenkins</a></p>
 <p align="center"><a href="cloud_service/portainer.html" target="_blank">Portainer</a></p>
-<p align="center"><a href="cloud_service/ai.html" target="_blank">大模型</a></p>
+
 <br/>
 <h3 align="center">Position</h3>
 <p align="center"><a href="#" onclick="open_url('1431','','https')">Position</a></p>
