--- a/bookmarks/cloud_service/ai.html
+++ b/bookmarks/cloud_service/ai.html
@@ -13,9 +13,26 @@
 
 <p align="center"><a href="https://chat.openai.com">ChatGPT</a></p>
 <br/>
+<br/>
+<p align="center"><a href="https://yiyan.baidu.com/">文心一言</a></p>
+<br/>
+<p align="center"><a href="https://www.doubao.com">云雀大模型</a></p>
+<br/>
 
+<p align="center"><a href="https://xinghuo.xfyun.cn">讯飞星火</a></p>
+<br/>
+<p align="center"><a href="https://www.baichuan-ai.com">百川智能</a></p>
+<br/>
+<p align="center"><a href="https://www.sensetime.com">商汤日日新</a></p>
+<br/>
+<p align="center"><a href="https://api.minimax.chat">MiniMax</a></p>
+<br/>
+<p align="center"><a href="https://xihe.mindspore.cn">紫东太初</a></p>
+<br/>
 <p align="center"><a href="https://chatglm.cn">ChatGLM</a></p>
 <br/>
+
+
 <p align="center"><a href="http://mianfeiai.site/#">其他</a></p>
 <br/>
 
