--- a/bookmarks/cloud_service/jenkins.html
+++ b/bookmarks/cloud_service/jenkins.html
@@ -31,10 +31,10 @@
 <!--<p align="center"><a href="#" onclick="open_url('34252','11580','https')">M401A_3445</a></p>-->
 <!--<br/>-->
 
-<!--<p align="center"><a href="#" onclick="open_url('34252','7780','https')">M401A_4B58</a></p>-->
-<!--<br/>-->
+<p align="center"><a href="#" onclick="open_url('34252','11880','https')">M401A_4B58</a></p>
+<br/>
 
-<p align="center"><a href="#" onclick="open_url('34252','11880','https')">M401A_337E</a></p>
+<p align="center"><a href="#" onclick="open_url('34252','7780','https')">M401A_337E</a></p>
 <br/>
 <br/>
 
