--- a/bookmarks/cloud_service.html
+++ b/bookmarks/cloud_service.html
@@ -12,6 +12,9 @@
 <h2 align="center">云服务合集</h2>
 
 <br/>
+<p align="center"><a href="/bookmarks/library.html" target="_blank">图书馆</a></p>
+
+<br/>
 <h3 align="center">大模型</h3>
 <p align="center"><a href="https://chat.openai.com/chat" target="_blank">ChatGPT</a></p>
 <p align="center"><a href="cloud_service/ai.html" target="_blank">所有大模型</a></p>
