--- a/index.html
+++ b/index.html
@@ -14,18 +14,21 @@
 
 <h3 align="center">试上超然台上看，半壕春水一城花。烟雨暗千家。</h3>
 
-<h3 align="center">Enterprise 2021</h3>
+<h3 align="center">New Horizon 2023</h3>
+
 <p align="center"><img src="assets/icons/ic_head_portrait.jpeg" alt="头像" width="10%" height="10%"></p>
+
+<p align="center"><a href="/bookmarks/library.html" target="_blank">图书馆</a></p>
+
+<p align="center"><a href="/bookmarks/cloud_service.html" target="_blank">云服务</a></p>
 
 <p align="center"><a href="https://github.com/bailiangjin" target="_blank">GitHub</a></p>
 
-<p align="center"><a href="bookmarks/cloud_service.html" target="_blank">云服务</a></p>
+<p align="center"><a href="/bookmarks/dev/index.html" target="_blank">开发书签</a></p>
 
-<p align="center"><a href="bookmarks/dev/index.html" target="_blank">开发书签</a></p>
+<p align="center"><a href="/bookmarks/search.html" target="_blank">搜索书签</a></p>
 
-<p align="center"><a href="bookmarks/search.html" target="_blank">搜索书签</a></p>
-
-<p align="center"><a href="bookmarks/blog.html" target="_blank">博客书签</a></p>
+<p align="center"><a href="/bookmarks/blog.html" target="_blank">博客书签</a></p>
 
 <p align="center"><a href="/bookmarks/bupt.html" target="_blank">北邮书签</a></p>
 
