--- a/bookmarks/cloud_service/ai.html
+++ b/bookmarks/cloud_service/ai.html
@@ -10,30 +10,33 @@
 <body>
 <h1 align="center">大模型</h1>
 
-
-<p align="center"><a href="https://chat.openai.com">ChatGPT</a></p>
+<p align="center"><a href="https://chat.openai.com" target="_blank">ChatGPT</a></p>
 <br/>
 <br/>
-<p align="center"><a href="https://yiyan.baidu.com/">文心一言</a></p>
+<p align="center"><a href="https://yiyan.baidu.com/" target="_blank">文心一言</a></p>
 <br/>
-<p align="center"><a href="https://www.doubao.com">云雀大模型</a></p>
+<p align="center"><a href="https://qianwen.aliyun.com/" target="_blank">通义千问</a></p>
 <br/>
-
-<p align="center"><a href="https://xinghuo.xfyun.cn">讯飞星火</a></p>
+<p align="center"><a href="https://hunyuan.tencent.com" target="_blank">腾讯混元</a></p>
 <br/>
-<p align="center"><a href="https://www.baichuan-ai.com">百川智能</a></p>
-<br/>
-<p align="center"><a href="https://www.sensetime.com">商汤日日新</a></p>
-<br/>
-<p align="center"><a href="https://api.minimax.chat">MiniMax</a></p>
-<br/>
-<p align="center"><a href="https://xihe.mindspore.cn">紫东太初</a></p>
-<br/>
-<p align="center"><a href="https://chatglm.cn">ChatGLM</a></p>
+<p align="center"><a href="https://www.doubao.com" target="_blank">云雀大模型</a></p>
 <br/>
 
+<p align="center"><a href="https://xinghuo.xfyun.cn" target="_blank">讯飞星火</a></p>
+<br/>
+<p align="center"><a href="https://www.baichuan-ai.com" target="_blank">百川智能</a></p>
+<br/>
+<p align="center"><a href="https://www.sensetime.com" target="_blank">商汤日日新</a></p>
+<br/>
+<p align="center"><a href="https://api.minimax.chat" target="_blank">MiniMax</a></p>
+<br/>
+<p align="center"><a href="https://xihe.mindspore.cn" target="_blank">紫东太初</a></p>
+<br/>
+<p align="center"><a href="https://chatglm.cn" target="_blank">ChatGLM</a></p>
+<br/>
 
-<p align="center"><a href="http://mianfeiai.site/#">其他</a></p>
+
+<p align="center"><a href="http://mianfeiai.site/#" target="_blank">其他</a></p>
 <br/>
 
 <br/>
