--- a/bookmarks/library.html
+++ b/bookmarks/library.html
@@ -25,6 +25,10 @@
 <p align="center"><a href="http://opacwh.tjl.tj.cn:8991/F" target="_blank">天津图书馆</a></p>
 <p align="center"><a href="http://opac.tjwqlib.cn:8991/F" target="_blank">武清区图书馆</a></p>
 
+<br/>
+<h3 align="center">开源书库</h3>
+<p align="center"><a href="https://www.jiumodiary.com/" target="_blank">鸠摩搜索</a></p>
+
 
 <br/>
 <h3 align="center">友情链接</h3>
