--- a/bookmarks/cloud_service/jenkins.html
+++ b/bookmarks/cloud_service/jenkins.html
@@ -38,7 +38,7 @@
 <br/>
 <br/>
 
-<p align="center"><a href="#" onclick="open_url('34252','17380','https')">M201-2</a></p>
+<p align="center"><a href="#" onclick="open_url('34252','10280','https')">PI_3BP</a></p>
 <br/>
 
 <!--<br/>-->
