--- a/bookmarks/cloud_service/jenkins.html
+++ b/bookmarks/cloud_service/jenkins.html
@@ -34,8 +34,8 @@
 <p align="center"><a href="#" onclick="open_url('34252','11880','https')">M401A_4B58</a></p>
 <br/>
 
-<p align="center"><a href="#" onclick="open_url('34252','7780','https')">M401A_337E</a></p>
-<br/>
+<!--<p align="center"><a href="#" onclick="open_url('34252','7780','https')">M401A_337E</a></p>-->
+<!--<br/>-->
 <br/>
 
 <p align="center"><a href="#" onclick="open_url('34252','10280','https')">PI_3BP</a></p>
