--- a/bookmarks/cloud_service.html
+++ b/bookmarks/cloud_service.html
@@ -27,6 +27,8 @@
 <br/>
 <h3 align="center">Position</h3>
 <p align="center"><a href="#" onclick="open_url('1431','','https')">Position</a></p>
+<br/>
+<p align="center"><a href="#" onclick="open_url('34252','11080','https')">Position_Local</a></p>
 
 <br/>
 <h3 align="center">NetWork</h3>
