--- a/bookmarks/cloud_service/ai.html
+++ b/bookmarks/cloud_service/ai.html
@@ -10,6 +10,8 @@
 <body>
 <h1 align="center">大模型</h1>
 
+<h2 align="center">通用大模型</h2>
+
 <p align="center"><a href="https://chat.openai.com" target="_blank">ChatGPT</a></p>
 <br/>
 <br/>
@@ -35,6 +37,9 @@
 <p align="center"><a href="https://chatglm.cn" target="_blank">ChatGLM</a></p>
 <br/>
 
+<h2>垂直领域大模型</h2>
+
+<p align="center"><a href="https://ai.jd.com/" target="_blank">京东人工智能研究院</a></p>
 
 <p align="center"><a href="http://mianfeiai.site/#" target="_blank">其他</a></p>
 <br/>
