--- a/bookmarks/cloud_service/we_media.html
+++ b/bookmarks/cloud_service/we_media.html
@@ -11,9 +11,22 @@
 <h1 align="center">自媒体平台</h1>
 
 
+<h1 align="center">闲话古诗词</h1>
+
 <p align="center"><a href="https://mp.weixin.qq.com/" target="_blank">公众号</a></p>
 <br/>
-<p align="center"><a href="https://zhihu.com" target="_blank">知乎</a></p>
+<p align="center"><a href="https://www.zhihu.com/people/xianhuagushici" target="_blank">知乎</a></p>
+<br/>
+<p align="center"><a href="https://weibo.com/xianhuagushici" target="_blank">微博</a></p>
+<br/>
+<p align="center"><a href="https://mp.toutiao.com" target="_blank">头条号</a></p>
+<br/>
+
+<h1 align="center">365早知天下事</h1>
+
+<p align="center"><a href="https://mp.weixin.qq.com/" target="_blank">公众号</a></p>
+<br/>
+<p align="center"><a href="https://www.zhihu.com/people/news365" target="_blank">知乎</a></p>
 <br/>
 <p align="center"><a href="https://weibo.com" target="_blank">微博</a></p>
 <br/>
