--- a/bookmarks/library.html
+++ b/bookmarks/library.html
@@ -16,9 +16,7 @@
 
 <br/>
 <h3 align="center">北京</h3>
-<p align="center"><a href="https://primo.clcn.net.cn/primo_library/libweb/action/loginpage.do?targetURL=https%3a%2f%2fprimo.clcn.net.cn%2fprimo_library%2flibweb%2faction%2fsearch.do%3fvid%3dST%26amp%3bmode%3dAdvanced%26amp%3bct%3dAdvancedSearch%26amp%3bdscnt%3d0%26amp%3bdstmp%3d1694000609494%26amp%3binitializeIndex%3dtrue&isMobile=false" target="_blank">首都图书馆</a></p>
-<p align="center"><a href="http://primo.clcn.net.cn:1701/primo_library/libweb/action/loginpage.do?targetURL=http%3a%2f%2fprimo.clcn.net.cn%3a1701%2fprimo_library%2flibweb%2faction%2fsearch.do%3ffrbg%3d%26amp%3b%26amp%3bfn%3dsearch%26amp%3bindx%3d1%26amp%3bdscnt%3d0%26amp%3bscp.scps%3dscope%253A%2528SY%2529%26amp%3bmode%3dBasic%26amp%3bvid%3dSY%26amp%3bct%3dsearch%26amp%3bsrt%3drank%26amp%3btab%3ddefault_tab%26amp%3bvl(58630726UI0)%3d%26amp%3bdum%3dtrue%26amp%3bvl(freeText0)%3d%26amp%3bdstmp%3d1694000828117%26amp%3binitializeIndex%3dtrue&isMobile=false" target="_blank">顺义区图书馆</a></p>
-<p align="center"><a href="http://primo.clcn.net.cn:1701/primo_library/libweb/action/loginpage.do?targetURL=http%3a%2f%2fprimo.clcn.net.cn%3a1701%2fprimo_library%2flibweb%2faction%2fsearch.do%3ffrbg%3d%26amp%3b%26amp%3bfn%3dsearch%26amp%3bindx%3d1%26amp%3bdscnt%3d0%26amp%3bscp.scps%3dscope%253A%2528CY%2529%26amp%3bmode%3dBasic%26amp%3bvid%3dCY%26amp%3bct%3dsearch%26amp%3bsrt%3drank%26amp%3btab%3ddefault_tab%26amp%3bvl(57042050UI0)%3dtitle%26amp%3bdum%3dtrue%26amp%3bvl(freeText0)%3d%26amp%3bdstmp%3d1694000935768%26amp%3binitializeIndex%3dtrue&isMobile=false" target="_blank">朝阳区图书馆</a></p>
+<p align="center"><a href="https://www.bplisn.net.cn" target="_blank">北京市公共图书馆</a></p>
 
 <br/>
 <h3 align="center">天津</h3>
